--- a/app/src/main/res/layout/fragment_inner_anime_info.xml
+++ b/app/src/main/res/layout/fragment_inner_anime_info.xml
@@ -19,10 +19,10 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
-                android:text="Synopsis:"
+                android:text="@string/synopsis"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -34,7 +34,7 @@
                 android:id="@+id/synopsisText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
                 android:textColor="@android:color/black"
@@ -47,10 +47,10 @@
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
-                android:text="Background:"
+                android:text="@string/background"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold"
@@ -62,7 +62,7 @@
                 android:id="@+id/backgroundText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
+                android:layout_marginStart="6dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="8dp"
