--- a/app/src/main/res/layout/fragment_search_anime.xml
+++ b/app/src/main/res/layout/fragment_search_anime.xml
@@ -9,6 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/midnightblue"
         android:focusable="true"
         android:focusableInTouchMode="true">
 
@@ -20,7 +21,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="6dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_white"
             android:iconifiedByDefault="false"
             app:layout_constraintBottom_toTopOf="@id/recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
