--- a/app/src/main/res/layout/fragment_search_user.xml
+++ b/app/src/main/res/layout/fragment_search_user.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/midnightblue"
     tools:context=".view.ui.FragmentSearchUser">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusableInTouchMode="true"
-        android:focusable="true">
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <SearchView
             android:id="@+id/searchUser"
@@ -19,7 +21,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="6dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/lightyellow"
+            android:background="@drawable/rounded_white"
             android:iconifiedByDefault="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
