--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#2c3e50</color>
+    <color name="colorAccent">#D81B60</color>
 
     <color name="midnightblue">#2c3e50</color>
     <color name="lightblue">#6a99cb</color>
